--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,8 +1,9 @@
 footer {
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   width: 100%;
-  min-width: 320px;
+  min-width: 350px;
   color: white;
   font-family: Helvetica;  
   background: #5666E7;
@@ -18,3 +19,12 @@ footer {
   margin-bottom: 10px;
 }
 
+@media (max-width: 430px) {
+  footer {
+    width: 100%;
+    padding: 20px 5%;
+  }
+  .logo img {
+    height: 50px;
+  }
+}
